--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Simple Carousel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
   </head>
   <body>
@@ -46,6 +47,8 @@
     
     <div id="mycarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
+  <h2>HTML Image</h2>
+<img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
   <ol class="carousel-indicators">
     <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
     <li data-target="#mycarousel" data-slide-to="1"></li>
